--- a/Readme
+++ b/Readme
@@ -1,6 +1,5 @@
 This the new way of life keep learning ... Be humble
 HOpe i will complete this time 
 `
-
-
+this is a time i understood better on ssh and git
 
